[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Levels/Level_5/Level_5.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ShipDefense/ShipDefense.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD/Interface/TopMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/Interface/TopInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/GreenBoxEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemies/RedBoxEnemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/HUD/Interface/HUD.gd" type="Script" id=7]
[ext_resource path="res://fonts/nasalization-rg.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/InterfaceStyle.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/PopupButtonText.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/PopupBackgroundStyle.tres" type="StyleBox" id=11]
[ext_resource path="res://Assets/PopupButtonStyle.tres" type="StyleBox" id=12]
[ext_resource path="res://Scenes/PowerUps/HealthPoints.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 18
extra_spacing_top = 1
extra_spacing_bottom = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 18
extra_spacing_top = 1
extra_spacing_bottom = 2
font_data = ExtResource( 8 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1296, 114.667, 0, 0, 0, 0, 1296, 343.6, 0, 0, 0, 0, 1296, 492.889, 0, 0, 0, 0, 1296, 545.333 )
}

[node name="Level" type="Node" groups=["levels"]]
script = ExtResource( 1 )
enemy_1 = ExtResource( 6 )
enemy_2 = ExtResource( 5 )
power_up = ExtResource( 13 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="PopupIntro" type="Popup" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_Intro" type="Panel" parent="HUD/PopupIntro"]
anchor_left = 0.335
anchor_top = 0.286
anchor_right = 0.666
anchor_bottom = 0.657
margin_left = 0.5
margin_top = -0.200012
margin_right = 0.200012
margin_bottom = 0.100006
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="Label" parent="HUD/PopupIntro/BG_Intro"]
anchor_top = 0.058
anchor_right = 1.0
anchor_bottom = 0.719
margin_left = 14.0
margin_top = -0.0800009
margin_right = -15.0
margin_bottom = 0.0599823
custom_fonts/font = ExtResource( 9 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="HUD/PopupIntro/BG_Intro"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -60.0
margin_right = 50.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="HUD/PopupIntro/BG_Intro"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -60.0
margin_right = 50.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupInfoMessage" type="Popup" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGInfoMessage" type="Panel" parent="HUD/PopupInfoMessage"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 506.5
margin_top = 161.5
margin_right = -506.5
margin_bottom = -415.5
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoMessage" type="Label" parent="HUD/PopupInfoMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 509.0
margin_top = 170.0
margin_right = -509.0
margin_bottom = -447.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 9 )
text = "ffffff"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopInterface" parent="HUD" instance=ExtResource( 4 )]

[node name="TopMenu" parent="HUD" instance=ExtResource( 3 )]

[node name="PopupCommandList" type="Popup" parent="HUD/TopMenu"]
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -469.5
margin_top = -244.0
margin_right = 469.5
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandList" type="Control" parent="HUD/TopMenu/PopupCommandList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -649.5
margin_top = -350.0
margin_right = 650.5
margin_bottom = 350.0

[node name="Panel" type="Panel" parent="HUD/TopMenu/PopupCommandList/CommandList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -240.0
margin_right = 400.0
margin_bottom = 240.0
custom_styles/panel = ExtResource( 11 )

[node name="Command" type="Label" parent="HUD/TopMenu/PopupCommandList/CommandList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -190.0
margin_right = 104.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "shot ---------------------------------------------------------
move \"displacement\" ---------------------------------
speed \"value\" --------------------------------------------
macro \"name command argument (if needed) command ...\" / \"name macro-name ...\" ------------
delete macro-name ------------------------------------
pause ------------------------------------------------------"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="HUD/TopMenu/PopupCommandList/CommandList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 112.0
margin_top = -190.0
margin_right = 350.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 2 )
text = "Shot a weapon
Move the ship
Change ship speed
Creates macro

Deletes macro
Pause the game"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClosePopup" type="Button" parent="HUD/TopMenu/PopupCommandList"]
margin_left = 540.0
margin_top = 400.0
margin_right = 710.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
shortcut_in_tooltip = false
action_mode = 0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="HUD/TopMenu/PopupCommandList"]
margin_left = 200.0
margin_top = 400.0
margin_right = 370.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 6.0

[node name="GameOverTimer" type="Timer" parent="HUD"]

[node name="ShipDefense" parent="." instance=ExtResource( 2 )]

[node name="ControlPath" type="Control" parent="."]
anchor_left = 0.982
anchor_top = 0.091
anchor_right = 1.004
anchor_bottom = 0.657
margin_left = 0.39978
margin_top = 0.299995
margin_right = -0.200073
margin_bottom = 0.100006
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesPath" type="Path2D" parent="ControlPath"]
position = Vector2( -1275, -104.32 )
scale = Vector2( 1, 0.97247 )
curve = SubResource( 3 )

[node name="EnemiesSpawnLocation" type="PathFollow2D" parent="ControlPath/EnemiesPath"]
position = Vector2( 1296, 114.667 )
rotation = 1.57077

[node name="UpPosition" type="Position2D" parent="."]
position = Vector2( 1298, 71 )
scale = Vector2( 1, 0.819004 )

[node name="DownPosition" type="Position2D" parent="."]
position = Vector2( 1298, 490 )

[node name="RedBoxEnemiesSpawnTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="SeqTimer" type="Timer" parent="."]
one_shot = true

[node name="TotalTime" type="Timer" parent="."]

[node name="GreenBoxEnemiesSpawn" type="Timer" parent="."]
wait_time = 8.0

[connection signal="change_degree" from="HUD" to="ShipDefense" method="_on_HUD_change_degree"]
[connection signal="change_power" from="HUD" to="ShipDefense" method="_on_HUD_change_power"]
[connection signal="endgame" from="HUD" to="." method="_on_HUD_endgame"]
[connection signal="gameover" from="HUD" to="." method="_on_HUD_gameover"]
[connection signal="intro_finished" from="HUD" to="." method="_on_HUD_intro_finished"]
[connection signal="move_ship" from="HUD" to="ShipDefense" method="_on_HUD_move_ship"]
[connection signal="pause_game" from="HUD" to="." method="_on_HUD_pause_game"]
[connection signal="return_main" from="HUD" to="." method="_on_HUD_return_main"]
[connection signal="shot_weapon" from="HUD" to="ShipDefense" method="_on_HUD_shot_weapon"]
[connection signal="speed_changed" from="HUD" to="ShipDefense" method="_on_HUD_speed_changed"]
[connection signal="pressed" from="HUD/PopupIntro/BG_Intro/Next" to="HUD" method="show_line"]
[connection signal="pressed" from="HUD/PopupIntro/BG_Intro/Start" to="HUD" method="_on_Start_pressed"]
[connection signal="pause_game" from="HUD/TopMenu" to="HUD" method="_on_TopMenu_pause_game"]
[connection signal="position_changed" from="HUD/TopMenu" to="HUD" method="_on_TopMenu_position_changed"]
[connection signal="ray_degree_changed" from="HUD/TopMenu" to="HUD" method="_on_TopMenu_degree_changed"]
[connection signal="ray_power_changed" from="HUD/TopMenu" to="HUD" method="_on_TopMenu_power_changed"]
[connection signal="shot_weapon" from="HUD/TopMenu" to="HUD" method="_on_TopMenu_shot_weapon"]
[connection signal="speed_changed" from="HUD/TopMenu" to="HUD" method="_on_TopMenu_speed_changed"]
[connection signal="pressed" from="HUD/TopMenu/PopupCommandList/ClosePopup" to="HUD" method="_on_ClosePopup_pressed"]
[connection signal="pressed" from="HUD/TopMenu/PopupCommandList/MainMenu" to="HUD" method="_on_MainMenu_pressed"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="HUD/GameOverTimer" to="HUD" method="_on_GameOverTimer_timeout"]
[connection signal="change_weapon" from="ShipDefense" to="HUD" method="_on_ShipDefense_change_weapon"]
[connection signal="dead" from="ShipDefense" to="." method="_on_ShipDefense_dead"]
[connection signal="inform_damage" from="ShipDefense" to="." method="_on_enemy_damage"]
[connection signal="inform_life" from="ShipDefense" to="HUD" method="_on_ShipDefense_inform_life"]
[connection signal="inform_position" from="ShipDefense" to="HUD" method="_on_ShipDefense_inform_position"]
[connection signal="timeout" from="RedBoxEnemiesSpawnTimer" to="." method="_on_RedBoxEnemiesSpawnTimer_timeout"]
[connection signal="timeout" from="SeqTimer" to="." method="_on_SeqTimer_timeout"]
[connection signal="timeout" from="TotalTime" to="." method="_on_TotalTime_timeout"]
[connection signal="timeout" from="GreenBoxEnemiesSpawn" to="." method="_on_GreenBoxEnemiesSpawn_timeout"]
